--- a/contingut/fonts.html
+++ b/contingut/fonts.html
@@ -302,7 +302,7 @@
 <p><strong>Fonts documentals:</strong><br>
 <span class="fonts-doc">
 • <strong>AMMAT</strong> - Arxiu Municipal de Matadepera.<br>
-&nbsp;&nbsp;- Padrons 1896, 1912.<br>
+&nbsp;&nbsp;- Padrons 1864, 1896, 1889, 1912, 1936.<br>
 &nbsp;&nbsp;- Registres Cementiri de Matadepera, 1926-1975.<br>
 • <strong>RCM</strong> - Registre Civil de Matadepera.</p>
 </span>
@@ -310,27 +310,27 @@
 <span class="fonts-doc">
 • Programes Festa Major de Matadepera 1944 i 1950 - Anuncis.<br>
 • Programa Festa Major de Matadepera 1973.<br>
-&nbsp;&nbsp;&nbsp;&nbsp;- Relació dels nois de la fotografia de l'escola Nacional 1912. Joan Font Pi "Corcola".<br>
-&nbsp;&nbsp;&nbsp;&nbsp;- Retall d'història. El nostre senyor Ramon. Joan Font Pi "Corcola".<br>
-&nbsp;&nbsp;&nbsp;&nbsp;- 1900 a 1910 segons un Matadeperenc del segle passat. Narcís Riba Arnau "Siset".<br>
+&nbsp;&nbsp;&nbsp;&nbsp;- Relació dels nois de la fotografia de l'escola Nacional 1912. Joan Font Pi, <em>Corcola</em>.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;- Retall d'història. El nostre senyor Ramon. Joan Font Pi, <em>Corcola</em>.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;- 1900 a 1910 segons un Matadeperenc del segle passat. Narcís Riba Arnau, <em>Siset</em>.<br>
 • Programa Festa Major de Matadepera 1974<br>
-&nbsp;&nbsp;&nbsp;&nbsp;- Relació de les noies de la fotografia de l'escola Nacional el 1912. Maria Lladó de "Cal Sidro" i Joan Font i Pi "Corcola".<br>
-&nbsp;&nbsp;&nbsp;&nbsp;- Retall d'història, festes i festetes. Joan Font Pi "Corcola".<br>
-&nbsp;&nbsp;&nbsp;&nbsp;- Reproducció d'un facsímil original de 1925 del "Montepio de Sant Sebastían".<br>
-&nbsp;&nbsp;&nbsp;&nbsp;- 1920 a 1930 segons un Matadeperenc del segle passat. Narcís Riba Arnau "Siset".<br>
+&nbsp;&nbsp;&nbsp;&nbsp;- Relació de les noies de la fotografia de l'escola Nacional el 1912. Maria Lladó de <em>Cal Sidro</em> i Joan Font i Pi, <em>Corcola</em>.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;- Retall d'història, festes i festetes. Joan Font Pi, <em>Corcola</em>.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;- Reproducció d'un facsímil original de 1925 del <em>Montepio de Sant Sebastían</em>.<br>
+&nbsp;&nbsp;&nbsp;&nbsp;- 1920 a 1930 segons un Matadeperenc del segle passat. Narcís Riba Arnau, <em>Siset</em>.<br>
 &nbsp;&nbsp;&nbsp;&nbsp;- Orla Festa de vellesa<br>
-• Exposició Pomar i Orriols "Homes de Matadepera". Facebook. Llorenç Pomar Argerich de <em>Ca l'Arangader</em>.</p>
+• Exposició Pomar i Orriols "Homes de Matadepera". Facebook de Llorenç Pomar Argerich de <em>Ca l'Arangader</em>.</p>
 </span>
 <p><strong>Bibliografia:</strong><br>
 <span class="fonts-doc">
-• Els Orígens del Nou Poble de Matadepera 1768 - 1868. - Manel Ametller Bassets – 1997.<br>
-• Matadepera Fins Ara. Miquel Ballbé Boada - 1994.<br>
+• Pròleg Matadepera Cent Anys de vida Coral. Josep M. Ballarín Monset -1983.<br>
 • Masos i pairalies de Matadepera. Miquel Ballbé Boada - 1985.<br>
 • Matadepera, Pagesos i Menestrals. Miquel Ballbé Boada - 1988.<br>
+• Matadepera Fins Ara. Miquel Ballbé Boada - 1994.<br>
+• Els Orígens del Nou Poble de Matadepera 1768 - 1868. - Manel Ametller Bassets – 1997.<br>
 • Matadepera, Sobrenoms i Malnoms. Llibretó no publicat de Miquel Ballbé Boada - c.2000 - Cedit per Mireya Ballbé Anglada.<br>
 • Dietari de Francesc Gorina i Riera, pagès de Matadepera, 1841-1904. Joan Comasòlivas i Font – 2003.<br>
-• El sac dels records. Memòries. Josep M. Ballarín Monset.<br>
-• Pròleg Matadepera Cent Anys de vida Coral. Josep M. Ballarín Monset.</p>
+• El sac dels records. Memòries. Josep M. Ballarín Monset - 2015.</p>
 </span>
 <p>&nbsp;</p>
 </main>
