--- a/contingut/fonts.html
+++ b/contingut/fonts.html
@@ -65,6 +65,18 @@
   </div>
 
   <div class="testimoni">
+    <span class="nom">Maria</span>
+    <span class="cognoms">Arnau Corbi</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Carreter</em>.</span>
+  </div>
+
+  <div class="testimoni">
+    <span class="nom">Pilar</span>
+    <span class="cognoms">Arnau Corbi</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Carreter</em>.</span>
+  </div>
+
+  <div class="testimoni">
     <span class="nom">Cesca</span>
     <span class="cognoms">Arnau Portell</span>
     <span class="renom">de&nbsp;&nbsp;<em>Cal Jepet</em>.</span>
