--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -150,7 +150,7 @@ Ca la Valencieneta</td>
 </tr>
 <tr>
     <td>25</td>
-    <td>Cal Carreter</td>
+    <td><button class="info-link" onclick="openInfo('cal-carreter')">Cal Carreter</button></td>
     <td></td>
 </tr>
 <tr>
@@ -810,7 +810,7 @@ Ca l'Abuela</td>
 </main>
 
 <!-- JavaScript -->
-<script src="js/info-panels.js?v=05102025"></script>
+<script src="js/info-panels.js?v=10102025"></script>
 
 <footer>
 &copy; 2025 Llorenç Robert Lairla i Marc Sellarès Genescà: tots els continguts d'aquest web,<br>
