--- a/contingut/fonts.html
+++ b/contingut/fonts.html
@@ -118,11 +118,15 @@
     <span class="renom">de&nbsp;&nbsp;<em>Cal Mingo</em>.</span>
   </div>
   <div class="testimoni">
-    <span class="nom">Ramón</span>
+    <span class="nom">Ramon</span>
     <span class="cognoms">Comasòlives Font</span>
     <span class="renom">de&nbsp;&nbsp;<em>Cal Mingo</em>.</span>
   </div>
-
+  <div class="testimoni">
+    <span class="nom">Josep M.</span>
+    <span class="cognoms">Farràs Serentill</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Farràs <small>(Artesa de Segre)</small></em>.</span>
+  </div>
   <div class="testimoni">
     <span class="nom">Paquita</span>
     <span class="cognoms">Farres i Lladó</span>
