--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -625,8 +625,8 @@ Ca la Doloretes</td>
 </tr>
 <tr>
     <td>31</td>
-    <td><button class="info-link" onclick="openInfo('cal-puetó')">Cal Puetó</button></td>
-    <td>Cal Rajoler</td>
+    <td><button class="info-link" onclick="openInfo('cal-poetó')">Cal Poetó</button></td>
+    <td><button class="info-link" onclick="openInfo('cal-poetó')">Cal Rajoler</button></td>
 </tr>
 <tr>
     <td>63</td>
@@ -810,7 +810,7 @@ Ca l'Abuela</td>
 </main>
 
 <!-- JavaScript -->
-<script src="js/info-panels.js?v=12102025"></script>
+<script src="js/info-panels.js?v=20102025"></script>
 
 <footer>
 &copy; 2025 Llorenç Robert Lairla i Marc Sellarès Genescà: tots els continguts d'aquest web,<br>
