--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -324,7 +324,7 @@ Ca la Nita</td>
 </tr>
 <tr>
     <td>67</td>
-    <td><button class="info-link" onclick="openInfo('cal-curreló')">Cal Curreló</button></td>
+    <td><button class="info-link" onclick="openInfo('cal-correló')">Cal Correló</button></td>
     <td></td>
 </tr>
 <tr>
@@ -810,7 +810,7 @@ Ca l'Abuela</td>
 </main>
 
 <!-- JavaScript -->
-<script src="js/info-panels.js?v=22102025"></script>
+<script src="js/info-panels.js?v=24102025"></script>
 
 <footer>
 &copy; 2025 Llorenç Robert Lairla i Marc Sellarès Genescà: tots els continguts d'aquest web,<br>
