--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -320,7 +320,9 @@ Ca la Nita</td>
 <tr>
     <td>64</td>
     <td><button class="info-link" onclick="openInfo('cal-roc')">Cal Roc</button></td>
-    <td>Cal Vivet</td>
+    <td>  Cal Vinyes
+    <br>
+    Cal Vivet</td>
 </tr>
 <tr>
     <td>67</td>
@@ -810,7 +812,7 @@ Ca l'Abuela</td>
 </main>
 
 <!-- JavaScript -->
-<script src="js/info-panels.js?v=24102025"></script>
+<script src="js/info-panels.js?v=26112025"></script>
 
 <footer>
 &copy; 2025 Llorenç Robert Lairla i Marc Sellarès Genescà: tots els continguts d'aquest web,<br>
