--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -612,7 +612,7 @@ Ca la Doloretes</td>
 </tr>
 <tr>
     <td>27</td>
-    <td>Ca la Pepa</td>
+    <td><button class="info-link" onclick="openInfo('ca-la-pepa')">Ca la Pepa</button></td>
     <td></td>
 </tr>
 <tr>
@@ -812,7 +812,7 @@ Ca l'Abuela</td>
 </main>
 
 <!-- JavaScript -->
-<script src="js/info-panels.js?v=03122025"></script>
+<script src="js/info-panels.js?v=05122025"></script>
 
 <footer>
 &copy; 2025 Llorenç Robert Lairla i Marc Sellarès Genescà: tots els continguts d'aquest web,<br>
