--- a/contingut/fonts.html
+++ b/contingut/fonts.html
@@ -55,147 +55,147 @@
   <div class="testimoni">
     <span class="nom">Sergi</span>
     <span class="cognoms">Adell Bruguera</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Rebenta Sabaters</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-rebenta-sabaters"><em>Cal Rebenta Sabaters</em></a>.</span>
   </div>
 
   <div class="testimoni">
     <span class="nom">Rosa Maria</span>
     <span class="cognoms">Altimira Sanz</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Cesc de can Roure</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-cesc-de-can-roure"><em>Cal Cesc de can Roure</em></a>.</span>
   </div>
 
   <div class="testimoni">
     <span class="nom">Maria</span>
     <span class="cognoms">Arnau Corbi</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Carreter</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-carreter"><em>Cal Carreter</em></a>.</span>
   </div>
 
   <div class="testimoni">
     <span class="nom">Pilar</span>
     <span class="cognoms">Arnau Corbi</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Carreter</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-carreter"><em>Cal Carreter</em></a>.</span>
   </div>
 
   <div class="testimoni">
     <span class="nom">Cesca</span>
     <span class="cognoms">Arnau Portell</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Jepet</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-jepet"><em>Cal Jepet</em></a>.</span>
   </div>
 
   <div class="testimoni">
     <span class="nom">Josep</span>
     <span class="cognoms">Beltrà Julià</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Beltrà</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-beltra"><em>Cal Beltrà</em></a>.</span>
   </div>
 
   <div class="testimoni">
     <span class="nom">Àngeleta</span>
     <span class="cognoms">Bosch Borrell</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Croc-Croc</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-croc-croc"><em>Cal Croc-Croc</em></a>.</span>
   </div>
 
   <div class="testimoni">
     <span class="nom">Pere</span>
     <span class="cognoms">Bruach Utzet</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Peret Ros</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-peret-ros"><em>Cal Peret Ros</em></a>.</span>
   </div>
 
   <div class="testimoni">
     <span class="nom">Isabel</span>
     <span class="cognoms">Busqueta Fuertes</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Macià</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-macia"><em>Cal Macià</em></a>.</span>
   </div>
 
   <div class="testimoni">
     <span class="nom">Teresina</span>
     <span class="cognoms">Cases Beltrà</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Beltrà</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-beltra"><em>Cal Beltrà</em></a>.</span>
   </div>
   
   <div class="testimoni">
     <span class="nom">Joan</span>
     <span class="cognoms">Comasòlives Font</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Mingo</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-mingo"><em>Cal Mingo</em></a>.</span>
   </div>
   <div class="testimoni">
     <span class="nom">Ramon</span>
     <span class="cognoms">Comasòlives Font</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Mingo</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-mingo"><em>Cal Mingo</em></a>.</span>
   </div>
   <div class="testimoni">
     <span class="nom">Josep M.</span>
     <span class="cognoms">Farràs Serentill</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Farràs <small>(Artesa de Segre)</small></em>.</span>
+    <span class="renom">de&nbsp;&nbsp;</a><em>Cal Farràs <small>(Artesa de Segre)</small></em>.</span>
   </div>
   <div class="testimoni">
     <span class="nom">Paquita</span>
     <span class="cognoms">Farres i Lladó</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Parot</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-parot"></a><em>Cal Parot</em></a>.</span>
   </div>
   
   <div class="testimoni">
     <span class="nom">Magdalena</span>
     <span class="cognoms">Font Utset</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Corcola</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-corcola"><em>Cal Corcola</em></a>.</span>
   </div>
   
   <div class="testimoni">
     <span class="nom">Joan</span>
     <span class="cognoms">Garcia Riba</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Pintoret</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-pintoret"><em>Cal Pintoret</em></a>.</span>
   </div>
   
   <div class="testimoni">
     <span class="nom">Enric</span>
     <span class="cognoms">Genescà Garrigosa</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Ca l'Estevet</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#ca-lestevet"><em>Ca l'Estevet</em></a>.</span>
   </div>
   <div class="testimoni">
     <span class="nom">Anna</span>
     <span class="cognoms">Genescà Garrigosa</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Ca l'Estevet</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#ca-lestevet"><em>Ca l'Estevet</em></a>.</span>
   </div>
 
   <div class="testimoni">
     <span class="nom">Mercè</span>
     <span class="cognoms">Genescà Puig</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Marcó</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-marco"><em>Cal Marcó</em></a>.</span>
   </div>
   
   <div class="testimoni">
     <span class="nom">Francesc</span>
     <span class="cognoms">Gorina Arnau</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Motxo</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-motxo"><em>Cal Motxo</em></a>.</span>
   </div>
   
   <div class="testimoni">
     <span class="nom">Lidia</span>
     <span class="cognoms">Grané Calvó</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Picarrocs</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-picarrocs"><em>Cal Picarrocs</em></a>.</span>
   </div>
 
   <div class="testimoni">
     <span class="nom">Vicenç</span>
     <span class="cognoms">Grané Calvó</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Picarrocs</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-picarrocs"><em>Cal Picarrocs</em></a>.</span>
   </div>
 
   <div class="testimoni">
     <span class="nom">M. Antònia</span>
     <span class="cognoms">Gutés Turu</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Monet</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-monet"><em>Cal Monet</em></a>.</span>
   </div>
 
   <div class="testimoni">
     <span class="nom">Ramon</span>
     <span class="cognoms">Gutés Martínez</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Trapet</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-trapet"><em>Cal Trapet</em></a>.</span>
   </div>
   
   <div class="testimoni">
     <span class="nom">Montserrat</span>
     <span class="cognoms">Lladó Puig</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Sidro</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-sidro"><em>Cal Sidro</em></a>.</span>
   </div>
 
   <div class="testimoni">
@@ -213,54 +213,54 @@
   <div class="testimoni">
     <span class="nom">Anna M.</span>
     <span class="cognoms">Pi Capel</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Niel</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-niel"><em>Cal Niel</em></a>.</span>
   </div>
   
   <div class="testimoni">
     <span class="nom">Maria</span>
     <span class="cognoms">Pi Gutés</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Ca la Bona Maria</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#ca-la-bona-maria"><em>Ca la Bona Maria</em></a>.</span>
   </div>
   
   <div class="testimoni">
     <span class="nom">Joan</span>
     <span class="cognoms">Pi Puig</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Xumeco</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-xumeco"><em>Cal Xumeco</em></a>.</span>
   </div>
   
   <div class="testimoni">
     <span class="nom">Pere</span>
     <span class="cognoms">Pi Puig</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Xumeco</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-xumeco"><em>Cal Xumeco</em></a>.</span>
   </div>
 
   <div class="testimoni">
     <span class="nom">Llorenç</span>
     <span class="cognoms">Pomar Argerich</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Ca l'Arangader</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-roig"><em>Ca l'Arangader</em></a>.</span>
   </div>
 
   <div class="testimoni">
     <span class="nom">Pere</span>
     <span class="cognoms">Porcar Busquets</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Tanta</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-tanta"><em>Cal Tanta</em></a>.</span>
   </div>
   
   <div class="testimoni">
     <span class="nom">Lidia</span>
     <span class="cognoms">Puig Torras</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Peret S'Escanya</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-peret-sescanya"><em>Cal Peret S'Escanya</em></a>.</span>
   </div>
   
   <div class="testimoni">
     <span class="nom">Emili</span>
     <span class="cognoms">Riba Gorina</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Motxo</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-motxo"><em>Cal Motxo</em></a>.</span>
   </div>
   <div class="testimoni">
     <span class="nom">Pere</span>
     <span class="cognoms">Riba Satlari</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Ca l'Angelet</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#ca-langelet"><em>Ca l'Angelet</em></a>.</span>
   </div>
 
   <div class="testimoni">
@@ -272,25 +272,25 @@
   <div class="testimoni">
     <span class="nom">Joan</span>
     <span class="cognoms">Sansó Ramón</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Muletes</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-muletes"><em>Cal Muletes</em></a>.</span>
   </div>
   
   <div class="testimoni">
     <span class="nom">Montserrat</span>
     <span class="cognoms">Segura Cortés</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Quistó</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-quisto"><em>Cal Quistó</em></a>.</span>
   </div>
   
   <div class="testimoni">
     <span class="nom">M. Antònia</span>
     <span class="cognoms">Sellarès Genescà</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Ferreret</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-ferreret"><em>Cal Ferreret</em></a>.</span>
   </div>
 
   <div class="testimoni">
     <span class="nom">Marta</span>
     <span class="cognoms">Soley Cardona</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Ca l'Arturo de Badalona</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#ca-larturo-de-badalona"><em>Ca l'Arturo de Badalona</em></a>.</span>
   </div>
 
   <div class="testimoni">
@@ -301,7 +301,7 @@
   <div class="testimoni">
     <span class="nom">Rosa</span>
     <span class="cognoms">Ventayol Godina</span>
-    <span class="renom">de&nbsp;&nbsp;<em>Cal Saltlari</em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-saltlari"><em>Cal Saltlari</em></a>.</span>
   </div>
 
 </div>
@@ -310,8 +310,8 @@
 <p>El nostre més sincer agraïment a tots per la vostra paciència, la vostra dedicació desinteressada i la confiança amb què ens heu acollit i ajudat.</p>
 <p><strong>Gràcies per preservar, amb nosaltres, un tros de la memòria del poble.</strong></p>
 <p style="text-align: right;font-size: 0.95em;"><em>
-<a href="quisom.html">Llorenç Robert Lairla</a> de Cal Genet&nbsp;&nbsp;&nbsp;<br>
-<a href="quisom.html">Marc Sellarès Genescà</a> de Cal Ferreret</em>
+<a href="quisom.html">Llorenç Robert Lairla</a> de <a href="cases.html#cal-genet">Cal Genet</a>&nbsp;&nbsp;&nbsp;<br>
+<a href="quisom.html">Marc Sellarès Genescà</a> de <a href="cases.html#cal-ferreret">Cal Ferreret</a></em>
 </p>
 
 <p>A més dels testimonis orals, aquesta recerca s’ha enriquit amb documents i publicacions de grans coneixedors de la història local, molts dels quals ja no són entre nosaltres, que han permès contrastar i completar la informació recollida.</p>
