--- a/contingut/quisom.html
+++ b/contingut/quisom.html
@@ -20,7 +20,6 @@
     <title>Qui Som - Renoms de les Cases de Matadepera</title>
     <meta name="description" content="Recull de renoms històrics de Matadepera. Autors: Llorenç Robert de Cal Genet i Marc Sellarès de Cal Ferreret.">
 </head>
-</head>
 <body>
 <header>
 <h1 class="titol-lloc">Renoms de les Cases de Matadepera</h1>
@@ -45,7 +44,7 @@
     </nav>
 <main>
 <h3 class="titol-mob">&#9612; Qui som</h3>
-<h2 style="text-align: center;">Recerca realitzada per:</h2><p style="text-align: center;"><b>Llorenç Robert</b> de <em>Cal Genet</em> i<br><strong>Marc Sellarès</strong> de <em>Cal Ferreret.</em></p>
+<h2 style="text-align: center;">Recerca realitzada per:</h2><p style="text-align: center;"><b>Llorenç Robert i Lairla</b> de <a href="cases.html#cal-genet"><em>Cal Genet</em></a> i<br><strong>Marc Sellarès i Genescà</strong> de <a href="cases.html#cal-ferreret"><em>Cal Ferreret.</em></a></p>
 <p>A Matadepera, com a la majoria de pobles en el passat, les cases i famílies es coneixien i destacaven per el seus renoms. Alguns encara perduren en la memòria de la nostre generació i també gràcies alguns llistats d'antigues publicacions, però gairebé mai s’havia documentat situant-los en el mapa. Per evitar que es perdin en el temps, hem fet aquesta tasca de recopilació, abans no sigui massa tard i desapareguin definitivament de la memòria col·lectiva.</p>
 <p>Per la recerca, ens hem basat sobretot amb en els records i testimonis de la gent més gran i hem contrastat les dades en arxius, fotografies, documents antics i antigues publicacions locals. Totes aquestes fonts es poden consultar a l’apartat  <a href="fonts.html"><strong>Fonts i agraïments</strong></a>.</p>
 <p>Hem descobert que moltes cases han tingut més d’un renom al llarg del temps, depenent sobretot dels seus habitants. Hem prioritzat el que ens ha semblat més reconegut, tot i que també hem indicat tots els altres.</p>
