--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -211,7 +211,7 @@ Ca la Valencieneta</td>
 <tr id="cal-ferreret">
     <td>39</td>
     <td><button class="info-link" onclick="openInfo('cal-ferreret')">Cal Ferreret</button></td>
-    <td></td>
+    <td>Cal Ferrer Nou</td>
 </tr>
 <tr id="cal-fuster">
     <td>40</td>
@@ -804,7 +804,7 @@ Ca la Valencieneta</td>
 </main>
 
 <!-- JS del panell -->
-<script src="js/info-panels.js?v=final"></script>
+<script src="js/info-panels.js?v=20122025"></script>
 
 <!-- Obrir panell automàticament si venim d'un enllaç àncora -->
 <script>
