--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -618,15 +618,20 @@ Ca la Valencieneta</td>
     <td><button class="info-link" onclick="openInfo('cal-xumeco')">Cal Xumeco</button></td>
     <td></td>
 </tr>
+<tr id="cal-poeto">
+    <td>31</td>
+    <td><button class="info-link" onclick="openInfo('cal-poeto')">Cal Poetó</button></td>
+    <td>Cal Rajoler</td>
+</tr>
+<tr id="ca-lespanol">
+    <td>35</td>
+    <td><button class="info-link" onclick="openInfo('ca-lespanol')">Ca l'Español</button></td>
+    <td></td>
+</tr>
 <tr>
     <td>30</td>
     <td>Cal Simon dels Carros</td>
     <td></td>
-</tr>
-<tr id="cal-poeto">
-    <td>31</td>
-    <td><button class="info-link" onclick="openInfo('cal-poeto')">Cal Poetó</button></td>
-    <td><button class="info-link" onclick="openInfo('cal-poeto')">Cal Rajoler</button></td>
 </tr>
 <tr id="cal-fuster-crispin">
     <td>63</td>
@@ -804,7 +809,7 @@ Ca la Valencieneta</td>
 </main>
 
 <!-- JS del panell -->
-<script src="js/info-panels.js?v=20122025"></script>
+<script src="js/info-panels.js?v=21122025"></script>
 
 <!-- Obrir panell automàticament si venim d'un enllaç àncora -->
 <script>
