--- a/contingut/fonts.html
+++ b/contingut/fonts.html
@@ -123,6 +123,11 @@
     <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-mingo"><em>Cal Mingo</em></a>.</span>
   </div>
   <div class="testimoni">
+    <span class="nom">Carles</span>
+    <span class="cognoms">Español Mora</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#ca-lespanol"><em>Ca l’Español</em></a>.</span>
+  </div>
+  <div class="testimoni">
     <span class="nom">Josep M.</span>
     <span class="cognoms">Farràs Serentill</span>
     <span class="renom">de&nbsp;&nbsp;</a><em>Cal Farràs <small>(Artesa de Segre)</small></em>.</span>
