--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -228,11 +228,6 @@ Ca la Valencieneta</td>
     <td><button class="info-link" onclick="openInfo('cal-muletes')">Cal Muletes</button></td>
     <td></td>
 </tr>
-<tr id="ca-lassuncion">
-    <td>44</td>
-    <td><button class="info-link" onclick="openInfo('ca-lassuncion')">Ca l'Assuncion</button></td>
-    <td></td>
-</tr>
 <tr id="cal-mabres">
     <td>45</td>
     <td><button class="info-link" onclick="openInfo('cal-mabres')">Cal Mabres</button></td>
@@ -255,6 +250,11 @@ Ca la Valencieneta</td>
         Ca la Jana<br>
         Cal Parramon
 </td>
+</tr>
+<tr id="ca-lassuncion">
+    <td>44</td>
+    <td><button class="info-link" onclick="openInfo('ca-lassuncion')">Ca l'Assuncion</button></td>
+    <td></td>
 </tr>
 <tr id="cal-gallifa">
     <td>48</td>
@@ -542,7 +542,7 @@ Ca la Valencieneta</td>
     <td></td>
 </tr>
 <tr id="cal-baldiro">
-    <td>Plaça</td>
+    <td>2<br>Plaça</td>
     <td><button class="info-link" onclick="openInfo('cal-baldiro')">Cal Baldiró</button></td>
     <td>Cal Tut</td>
 </tr>
