--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -585,8 +585,7 @@ Ca la Valencieneta</td>
 <tr id="cal-sidro">
     <td>11</td>
     <td><button class="info-link" onclick="openInfo('cal-sidro')">Cal Sidro</button></td>
-    <td>Ca les Galotes<br>
-        Ca la Doloretes</td>
+    <td>Ca la Doloretes</td>
 </tr>
 <tr>
     <td>15</td>
