--- a/contingut/fonts.html
+++ b/contingut/fonts.html
@@ -95,7 +95,7 @@
 
   <div class="testimoni">
     <span class="nom">Pere</span>
-    <span class="cognoms">Bruach Utzet</span>
+    <span class="cognoms">Bruach Utzet <small>(1938-2026)</small></span>
     <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-peret-ros"><em>Cal Peret Ros</em></a>.</span>
   </div>
 
