--- a/index.html
+++ b/index.html
@@ -47,8 +47,10 @@
 <p>Un comentari fora de lloc, un fet graciós, un diminutiu del nom del més petit de la casa o la professió familiar podien ser suficients per imposar un renom o malnom que identificava la família per sempre. Tot i que en alguns casos els malnoms podien tenir un toc despectiu, la majoria els acceptava amb naturalitat. De fet, molts els assumien amb orgull, dient: <strong>“Jo sóc de cal...”</strong></p>
 <p>En aquest lloc hem intentat recopilar molts dels renoms i malnoms de les cases de Matadepera que van ser típics entre mitjans del segle XIX i mitjans del segle XX, <strong>abans no s’esborrin de la memòria col·lectiva i es perdin per sempre</strong>.</p>
 <p>A l’apartat <a href="contingut/cases.html"><strong>Cases</strong></a> els trobareu en forma de llistat, distribuïts pels principals carrers del nucli urbà de Matadepera, i a l’apartat <a href="contingut/mapa.html"><strong>Mapa</strong></a> els podreu veure situats segons corresponien en la seva ubicació actual.</p><p>Esperem que aquest recull us agradi, us desperti records i, sobretot, <strong>us animem a compartir els vostres coneixements per preservar-los plegats.</strong></p>
-<p style="text-align: center;">Altres web recomanades de Matadepera Hist&ograve;rica: 
-<a href="https://tempsfugitmatadepera.blogspot.com/">https://tempsfugitmatadepera.blogspot.com/</a></p>
+<p role="note" style="text-align:center;">
+  <strong>NOTA:</strong> Aquest projecte encara es troba<br>
+  <strong>EN FASE D'ESTUDI I DESENVOLUPAMENT.</strong>
+</p>
 </main>
 <footer>
 <p>&copy; 2025 Llorenç Robert Lairla i Marc Sellarès Genescà: tots els continguts d'aquest web,<br>
