--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -773,9 +773,9 @@ Ca la Valencieneta</td>
 
 <tbody>
 <!-- Carrer de Josep Porcar -->
-<tr>
+<tr id="cal-bocatort">
     <td>37</td>
-    <td>Cal Llavitallat</td>
+    <td>Cal Bocatort</td>
     <td></td>
 </tr>
 <tr id="cal-boya">
@@ -807,7 +807,7 @@ Ca la Valencieneta</td>
 </main>
 
 <!-- JS del panell -->
-<script src="js/info-panels.js?v=26122025"></script>
+<script src="js/info-panels.js?v=03022026"></script>
 
 <!-- Obrir panell automàticament si venim d'un enllaç àncora -->
 <script>
