--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -778,9 +778,9 @@ Ca la Valencieneta</td>
     <td>Cal Bocatort</td>
     <td></td>
 </tr>
-<tr id="cal-boya">
+<tr id="cal-dr.-boya">
     <td>39</td>
-    <td><button class="info-link" onclick="openInfo('cal-boya')">Cal Boya</button></td>
+    <td><button class="info-link" onclick="openInfo('cal-dr.-boya')">Cal Dr. Boya</button></td>
     <td></td>
 </tr>
 <tr id="cal-pa-amb-oli">
@@ -807,7 +807,7 @@ Ca la Valencieneta</td>
 </main>
 
 <!-- JS del panell -->
-<script src="js/info-panels.js?v=03022026"></script>
+<script src="js/info-panels.js?v=04022026"></script>
 
 <!-- Obrir panell automàticament si venim d'un enllaç àncora -->
 <script>
