--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -778,9 +778,9 @@ Ca la Valencieneta</td>
     <td>Cal Bocatort</td>
     <td></td>
 </tr>
-<tr id="cal-dr.-boya">
+<tr id="cal-dr-boya">
     <td>39</td>
-    <td><button class="info-link" onclick="openInfo('cal-dr.-boya')">Cal Dr. Boya</button></td>
+    <td><button class="info-link" onclick="openInfo('cal-dr-boya')">Cal Dr. Boya</button></td>
     <td></td>
 </tr>
 <tr id="cal-pa-amb-oli">
