--- a/contingut/fonts.html
+++ b/contingut/fonts.html
@@ -251,6 +251,12 @@
   </div>
   
   <div class="testimoni">
+    <span class="nom">Maria</span>
+    <span class="cognoms">Puig Tordera</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-pelleringa"><em>Cal Pelleringa</em></a>.</span>
+  </div>
+
+  <div class="testimoni">
     <span class="nom">Lidia</span>
     <span class="cognoms">Puig Torras</span>
     <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-peret-sescanya"><em>Cal Peret S'Escanya</em></a>.</span>
