--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -581,10 +581,15 @@ Ca la Valencieneta</td>
     <td>Cal Peret Satlari</td>
     <td></td>
 </tr>
-<tr id="cal-sidro">
+<tr id="ca-la-doloretes">
     <td>11</td>
+    <td><button class="info-link" onclick="openInfo('ca-la-doloretes')">Ca la Doloretes</button></td>
+    <td></td>
+</tr>
+<tr id="cal-sidro">
+    <td>13</td>
     <td><button class="info-link" onclick="openInfo('cal-sidro')">Cal Sidro</button></td>
-    <td>Ca la Doloretes</td>
+    <td></td>
 </tr>
 <tr>
     <td>15</td>
@@ -620,6 +625,11 @@ Ca la Valencieneta</td>
     <td>31</td>
     <td><button class="info-link" onclick="openInfo('cal-poeto')">Cal Poetó</button></td>
     <td>Cal Rajoler</td>
+</tr>
+<tr id="ca-la-lluisia">
+    <td>33</td>
+    <td>Ca la Lluisia</td>
+    <td>Cal Pere de la Pipa</td>
 </tr>
 <tr id="ca-lespanol">
     <td>35</td>
@@ -672,11 +682,6 @@ Ca la Valencieneta</td>
 <tr>
     <td>81</td>
     <td>Cal Lino</td>
-    <td></td>
-</tr>
-<tr>
-    <td>89</td>
-    <td>Cal Gabarro</td>
     <td></td>
 </tr>
  </tbody>
@@ -807,7 +812,7 @@ Ca la Valencieneta</td>
 </main>
 
 <!-- JS del panell -->
-<script src="js/info-panels.js?v=04022026"></script>
+<script src="js/info-panels.js?v=07022026"></script>
 
 <!-- Obrir panell automàticament si venim d'un enllaç àncora -->
 <script>
