--- a/contingut/fonts.html
+++ b/contingut/fonts.html
@@ -129,12 +129,12 @@
   <div class="testimoni">
     <span class="nom">Josep M.</span>
     <span class="cognoms">Farràs Serentill</span>
-    <span class="renom">de&nbsp;&nbsp;</a><em>Cal Farràs <small>(Artesa de Segre)</small></em>.</span>
+    <span class="renom">de&nbsp;&nbsp;<em>Cal Farràs <small>(Artesa de Segre)</small></em>.</span>
   </div>
   <div class="testimoni">
     <span class="nom">Paquita</span>
     <span class="cognoms">Farres i Lladó</span>
-    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-parot"></a><em>Cal Parot</em></a>.</span>
+    <span class="renom">de&nbsp;&nbsp;<a href="cases.html#cal-parot"><em>Cal Parot</em></a>.</span>
   </div>
   
   <div class="testimoni">
