--- a/contingut/cases.html
+++ b/contingut/cases.html
@@ -460,7 +460,7 @@ Ca la Valencieneta</td>
 <tr id="cal-fin">
     <td>5</td>
     <td><button class="info-link" onclick="openInfo('cal-fin')">Cal Fin</button></td>
-    <td></td>
+    <td>Cal Busquetó</td>
 </tr>
 <tr id="cal-joan-sord">
     <td>6A</td>
@@ -812,7 +812,7 @@ Ca la Valencieneta</td>
 </main>
 
 <!-- JS del panell -->
-<script src="js/info-panels.js?v=08022026"></script>
+<script src="js/info-panels.js?v=14022026"></script>
 
 <!-- Obrir panell automàticament si venim d'un enllaç àncora -->
 <script>
